--- a/dwp-hack-the-north-ui/src/App.scss
+++ b/dwp-hack-the-north-ui/src/App.scss
@@ -4,17 +4,22 @@
   text-align: center;
 }
 
+/*
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
+*/
 
+/*
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
+*/
 
+/*
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -25,10 +30,13 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+*/
 
+/*
 .App-link {
   color: #61dafb;
 }
+*/
 
 @keyframes App-logo-spin {
   from {
@@ -39,15 +47,17 @@
   }
 }
 
+/*
 .govuk-footer__copyright-logo{
   display: inline-block;
   min-width: 125px;
   padding-top: 112px;
   background-image: url("~govuk-frontend/govuk/assets/images/govuk-crest.png");
   background-repeat: no-repeat;
-  background-position: 50% 0%;
+  background-position: 50% 0;
   background-size: 125px 102px;
   text-align: center;
   text-decoration: none;
   white-space: nowrap;
 }
+*/
